finished adding content to sustainability, need to fix alignment for sustain page

--- a/routescoffee.css
+++ b/routescoffee.css
@@ -65,12 +65,15 @@ nav {
 .headerimg {
     height: 90px;
     margin-top: 30px;
-    margin-left: 12%;
+    margin-left: 18em;
     display: block;
 }
 .header-container {
     padding-top: 165px;
-    margin-top: 18em;
+    margin-top: 5em;
+}
+.welcome-header {
+    margin-right: 18em;
 }
 .busimg {
     height: 160px;
@@ -186,6 +189,12 @@ footer {
     padding-top: 90px;
     padding-bottom: 60px;
 }
+.footer-content {
+    width: 80%;
+}
+.social-media {
+    padding-left: 38%;
+}
 .media-icons i {
     color: white;
     font-size: 26px;
@@ -212,6 +221,7 @@ footer {
 .copyright {
     color: grey;
     font-size: 14px;
+    margin-right: 15em;
 }
 .credit {
     color: grey;
@@ -290,15 +300,20 @@ header {
 /* SUSTAINABILITY PAGE */
 
 .sustainability-content {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 20em;
+    padding-top: 7em;
+}
+.sustainability-content .hr {
+    margin-bottom: 2em;
 }
 .sustainability-sect {
     background-color: #f6f6f6;
 }
-.story {
-    width: 50%;
+/* .story {
+    margin-right: em;
+} */
+.story h5 {
+    font-size: 20px;
+    margin-bottom: 0.4em;
 }
 h4 {
     margin-top: 4em;
@@ -309,4 +324,26 @@ h4 {
 }
 .account-header {
     margin-left: 14em;
+}
+.sustain-header {
+    width: 80%;
+    margin: auto;
+}
+.sustainability-p {
+    font-size: 16px;
+    color: grey;
+    text-align: left;
+    word-wrap: word-break;
+    padding-bottom: .5em;
+    line-height: 1.5em;
+}
+.bolden {
+    font-weight: 600;
+    margin-bottom: 4em;
+    margin-top: 4em;
+    color: black;
+}
+.sustain-image {
+    width: auto;
+    height: 420px;
 }
